--- a/config.env
+++ b/config.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb://localhost:27017/ejemplo
+ATLAS_URI=mongodb+srv://ejemplo:JU45C65aJYtGRL7U@cluster0.rm4jdd8.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
